Agregados los criterios 5 y 6

--- a/hrml/se.html
+++ b/hrml/se.html
@@ -1,163 +1,57 @@
 <style type="text/css">
-#T_9d9f7_row0_col0, #T_9d9f7_row0_col1, #T_9d9f7_row0_col2, #T_9d9f7_row0_col3, #T_9d9f7_row0_col4, #T_9d9f7_row0_col5, #T_9d9f7_row0_col6, #T_9d9f7_row0_col7, #T_9d9f7_row0_col8, #T_9d9f7_row0_col9, #T_9d9f7_row0_col10, #T_9d9f7_row0_col11, #T_9d9f7_row0_col12, #T_9d9f7_row0_col13, #T_9d9f7_row0_col14, #T_9d9f7_row0_col15, #T_9d9f7_row1_col0, #T_9d9f7_row1_col1, #T_9d9f7_row1_col2, #T_9d9f7_row1_col3, #T_9d9f7_row1_col4, #T_9d9f7_row1_col5, #T_9d9f7_row1_col6, #T_9d9f7_row1_col7, #T_9d9f7_row1_col8, #T_9d9f7_row1_col9, #T_9d9f7_row1_col10, #T_9d9f7_row1_col11, #T_9d9f7_row1_col12, #T_9d9f7_row1_col13, #T_9d9f7_row1_col14, #T_9d9f7_row1_col15, #T_9d9f7_row2_col0, #T_9d9f7_row2_col1, #T_9d9f7_row2_col2, #T_9d9f7_row2_col3, #T_9d9f7_row2_col4, #T_9d9f7_row2_col5, #T_9d9f7_row2_col6, #T_9d9f7_row2_col7, #T_9d9f7_row2_col8, #T_9d9f7_row2_col9, #T_9d9f7_row2_col10, #T_9d9f7_row2_col11, #T_9d9f7_row2_col12, #T_9d9f7_row2_col13, #T_9d9f7_row2_col14, #T_9d9f7_row2_col15, #T_9d9f7_row3_col0, #T_9d9f7_row3_col1, #T_9d9f7_row3_col2, #T_9d9f7_row3_col3, #T_9d9f7_row3_col4, #T_9d9f7_row3_col5, #T_9d9f7_row3_col6, #T_9d9f7_row3_col7, #T_9d9f7_row3_col8, #T_9d9f7_row3_col9, #T_9d9f7_row3_col10, #T_9d9f7_row3_col11, #T_9d9f7_row3_col12, #T_9d9f7_row3_col13, #T_9d9f7_row3_col14, #T_9d9f7_row3_col15, #T_9d9f7_row4_col0, #T_9d9f7_row4_col1, #T_9d9f7_row4_col2, #T_9d9f7_row4_col3, #T_9d9f7_row4_col4, #T_9d9f7_row4_col5, #T_9d9f7_row4_col6, #T_9d9f7_row4_col7, #T_9d9f7_row4_col8, #T_9d9f7_row4_col9, #T_9d9f7_row4_col10, #T_9d9f7_row4_col11, #T_9d9f7_row4_col12, #T_9d9f7_row4_col13, #T_9d9f7_row4_col14, #T_9d9f7_row4_col15, #T_9d9f7_row5_col0, #T_9d9f7_row5_col1, #T_9d9f7_row5_col2, #T_9d9f7_row5_col3, #T_9d9f7_row5_col4, #T_9d9f7_row5_col5, #T_9d9f7_row5_col6, #T_9d9f7_row5_col7, #T_9d9f7_row5_col8, #T_9d9f7_row5_col9, #T_9d9f7_row5_col10, #T_9d9f7_row5_col11, #T_9d9f7_row5_col12, #T_9d9f7_row5_col13, #T_9d9f7_row5_col14, #T_9d9f7_row5_col15, #T_9d9f7_row6_col0, #T_9d9f7_row6_col1, #T_9d9f7_row6_col2, #T_9d9f7_row6_col3, #T_9d9f7_row6_col4, #T_9d9f7_row6_col5, #T_9d9f7_row6_col6, #T_9d9f7_row6_col7, #T_9d9f7_row6_col8, #T_9d9f7_row6_col9, #T_9d9f7_row6_col10, #T_9d9f7_row6_col11, #T_9d9f7_row6_col12, #T_9d9f7_row6_col13, #T_9d9f7_row6_col14, #T_9d9f7_row6_col15 {
+#T_b6bbf_row0_col0, #T_b6bbf_row0_col1, #T_b6bbf_row0_col2, #T_b6bbf_row0_col3, #T_b6bbf_row0_col4, #T_b6bbf_row0_col5, #T_b6bbf_row0_col6, #T_b6bbf_row0_col7, #T_b6bbf_row0_col8, #T_b6bbf_row0_col9, #T_b6bbf_row0_col10, #T_b6bbf_row0_col11, #T_b6bbf_row0_col12, #T_b6bbf_row0_col13, #T_b6bbf_row0_col14, #T_b6bbf_row0_col15, #T_b6bbf_row0_col16, #T_b6bbf_row0_col17, #T_b6bbf_row0_col18, #T_b6bbf_row0_col19 {
   background-color: #85e62c;
 }
 </style>
-<table id="T_9d9f7">
+<table id="T_b6bbf">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
-      <th id="T_9d9f7_level0_col0" class="col_heading level0 col0" >Hora</th>
-      <th id="T_9d9f7_level0_col1" class="col_heading level0 col1" >ALyC</th>
-      <th id="T_9d9f7_level0_col2" class="col_heading level0 col2" >CIM</th>
-      <th id="T_9d9f7_level0_col3" class="col_heading level0 col3" >Cuenta</th>
-      <th id="T_9d9f7_level0_col4" class="col_heading level0 col4" >Activo</th>
-      <th id="T_9d9f7_level0_col5" class="col_heading level0 col5" >FinalidadID</th>
-      <th id="T_9d9f7_level0_col6" class="col_heading level0 col6" >Cantidad</th>
-      <th id="T_9d9f7_level0_col7" class="col_heading level0 col7" >Monto</th>
-      <th id="T_9d9f7_level0_col8" class="col_heading level0 col8" >Ingresos Verificados</th>
-      <th id="T_9d9f7_level0_col9" class="col_heading level0 col9" >Ingreso No Verificado</th>
-      <th id="T_9d9f7_level0_col10" class="col_heading level0 col10" >Saldo Inicial</th>
-      <th id="T_9d9f7_level0_col11" class="col_heading level0 col11" >Margenes</th>
-      <th id="T_9d9f7_level0_col12" class="col_heading level0 col12" >Saldo Consolidado Final</th>
-      <th id="T_9d9f7_level0_col13" class="col_heading level0 col13" >Propia MC</th>
-      <th id="T_9d9f7_level0_col14" class="col_heading level0 col14" >Saldo MC</th>
-      <th id="T_9d9f7_level0_col15" class="col_heading level0 col15" >OUT</th>
+      <th id="T_b6bbf_level0_col0" class="col_heading level0 col0" >Hora</th>
+      <th id="T_b6bbf_level0_col1" class="col_heading level0 col1" >ALyC</th>
+      <th id="T_b6bbf_level0_col2" class="col_heading level0 col2" >CIM</th>
+      <th id="T_b6bbf_level0_col3" class="col_heading level0 col3" >Cuenta</th>
+      <th id="T_b6bbf_level0_col4" class="col_heading level0 col4" >Activo</th>
+      <th id="T_b6bbf_level0_col5" class="col_heading level0 col5" >FinalidadID</th>
+      <th id="T_b6bbf_level0_col6" class="col_heading level0 col6" >Cantidad</th>
+      <th id="T_b6bbf_level0_col7" class="col_heading level0 col7" >Monto</th>
+      <th id="T_b6bbf_level0_col8" class="col_heading level0 col8" >Ingresos Verificados</th>
+      <th id="T_b6bbf_level0_col9" class="col_heading level0 col9" >Ingreso No Verificado</th>
+      <th id="T_b6bbf_level0_col10" class="col_heading level0 col10" >Saldo Inicial</th>
+      <th id="T_b6bbf_level0_col11" class="col_heading level0 col11" >Margenes</th>
+      <th id="T_b6bbf_level0_col12" class="col_heading level0 col12" >Saldo Consolidado Final</th>
+      <th id="T_b6bbf_level0_col13" class="col_heading level0 col13" >Propia MC</th>
+      <th id="T_b6bbf_level0_col14" class="col_heading level0 col14" >Saldo MC</th>
+      <th id="T_b6bbf_level0_col15" class="col_heading level0 col15" >EstadoLOP</th>
+      <th id="T_b6bbf_level0_col16" class="col_heading level0 col16" >LopNoVerificado</th>
+      <th id="T_b6bbf_level0_col17" class="col_heading level0 col17" >LopVerificado</th>
+      <th id="T_b6bbf_level0_col18" class="col_heading level0 col18" >LopMargenTotal</th>
+      <th id="T_b6bbf_level0_col19" class="col_heading level0 col19" >OUT</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th id="T_9d9f7_level0_row0" class="row_heading level0 row0" >0</th>
-      <td id="T_9d9f7_row0_col0" class="data row0 col0" >09:24:39</td>
-      <td id="T_9d9f7_row0_col1" class="data row0 col1" >ECO VALORES S.A.</td>
-      <td id="T_9d9f7_row0_col2" class="data row0 col2" >1269</td>
-      <td id="T_9d9f7_row0_col3" class="data row0 col3" >1269</td>
-      <td id="T_9d9f7_row0_col4" class="data row0 col4" >Depósito U$S</td>
-      <td id="T_9d9f7_row0_col5" class="data row0 col5" >2</td>
-      <td id="T_9d9f7_row0_col6" class="data row0 col6" >1,532</td>
-      <td id="T_9d9f7_row0_col7" class="data row0 col7" >-567,560</td>
-      <td id="T_9d9f7_row0_col8" class="data row0 col8" >0</td>
-      <td id="T_9d9f7_row0_col9" class="data row0 col9" >525,281</td>
-      <td id="T_9d9f7_row0_col10" class="data row0 col10" >4,087,940</td>
-      <td id="T_9d9f7_row0_col11" class="data row0 col11" >0</td>
-      <td id="T_9d9f7_row0_col12" class="data row0 col12" >3,520,380</td>
-      <td id="T_9d9f7_row0_col13" class="data row0 col13" >6602</td>
-      <td id="T_9d9f7_row0_col14" class="data row0 col14" >14,203,756</td>
-      <td id="T_9d9f7_row0_col15" class="data row0 col15" >1</td>
-    </tr>
-    <tr>
-      <th id="T_9d9f7_level0_row1" class="row_heading level0 row1" >1</th>
-      <td id="T_9d9f7_row1_col0" class="data row1 col0" >09:38:56</td>
-      <td id="T_9d9f7_row1_col1" class="data row1 col1" >BOLSA DE COMERCIO DEL CHACO</td>
-      <td id="T_9d9f7_row1_col2" class="data row1 col2" >1337</td>
-      <td id="T_9d9f7_row1_col3" class="data row1 col3" >193127</td>
-      <td id="T_9d9f7_row1_col4" class="data row1 col4" >Depósito U$S</td>
-      <td id="T_9d9f7_row1_col5" class="data row1 col5" >2</td>
-      <td id="T_9d9f7_row1_col6" class="data row1 col6" >650</td>
-      <td id="T_9d9f7_row1_col7" class="data row1 col7" >-240,805</td>
-      <td id="T_9d9f7_row1_col8" class="data row1 col8" >0</td>
-      <td id="T_9d9f7_row1_col9" class="data row1 col9" >0</td>
-      <td id="T_9d9f7_row1_col10" class="data row1 col10" >259,174</td>
-      <td id="T_9d9f7_row1_col11" class="data row1 col11" >0</td>
-      <td id="T_9d9f7_row1_col12" class="data row1 col12" >18,369</td>
-      <td id="T_9d9f7_row1_col13" class="data row1 col13" >22795</td>
-      <td id="T_9d9f7_row1_col14" class="data row1 col14" >0</td>
-      <td id="T_9d9f7_row1_col15" class="data row1 col15" >1</td>
-    </tr>
-    <tr>
-      <th id="T_9d9f7_level0_row2" class="row_heading level0 row2" >2</th>
-      <td id="T_9d9f7_row2_col0" class="data row2 col0" >09:34:47</td>
-      <td id="T_9d9f7_row2_col1" class="data row2 col1" >BOLSA DE COMERCIO DEL CHACO</td>
-      <td id="T_9d9f7_row2_col2" class="data row2 col2" >1337</td>
-      <td id="T_9d9f7_row2_col3" class="data row2 col3" >79527</td>
-      <td id="T_9d9f7_row2_col4" class="data row2 col4" >AL30</td>
-      <td id="T_9d9f7_row2_col5" class="data row2 col5" >2</td>
-      <td id="T_9d9f7_row2_col6" class="data row2 col6" >400</td>
-      <td id="T_9d9f7_row2_col7" class="data row2 col7" >-36,448</td>
-      <td id="T_9d9f7_row2_col8" class="data row2 col8" >0</td>
-      <td id="T_9d9f7_row2_col9" class="data row2 col9" >0</td>
-      <td id="T_9d9f7_row2_col10" class="data row2 col10" >36,448</td>
-      <td id="T_9d9f7_row2_col11" class="data row2 col11" >0</td>
-      <td id="T_9d9f7_row2_col12" class="data row2 col12" >0</td>
-      <td id="T_9d9f7_row2_col13" class="data row2 col13" >22795</td>
-      <td id="T_9d9f7_row2_col14" class="data row2 col14" >0</td>
-      <td id="T_9d9f7_row2_col15" class="data row2 col15" >1</td>
-    </tr>
-    <tr>
-      <th id="T_9d9f7_level0_row3" class="row_heading level0 row3" >3</th>
-      <td id="T_9d9f7_row3_col0" class="data row3 col0" >09:38:56</td>
-      <td id="T_9d9f7_row3_col1" class="data row3 col1" >BOLSA DE COMERCIO DEL CHACO</td>
-      <td id="T_9d9f7_row3_col2" class="data row3 col2" >1337</td>
-      <td id="T_9d9f7_row3_col3" class="data row3 col3" >80318</td>
-      <td id="T_9d9f7_row3_col4" class="data row3 col4" >Depósito U$S</td>
-      <td id="T_9d9f7_row3_col5" class="data row3 col5" >2</td>
-      <td id="T_9d9f7_row3_col6" class="data row3 col6" >1,200</td>
-      <td id="T_9d9f7_row3_col7" class="data row3 col7" >-444,564</td>
-      <td id="T_9d9f7_row3_col8" class="data row3 col8" >0</td>
-      <td id="T_9d9f7_row3_col9" class="data row3 col9" >0</td>
-      <td id="T_9d9f7_row3_col10" class="data row3 col10" >492,819</td>
-      <td id="T_9d9f7_row3_col11" class="data row3 col11" >2,746</td>
-      <td id="T_9d9f7_row3_col12" class="data row3 col12" >48,255</td>
-      <td id="T_9d9f7_row3_col13" class="data row3 col13" >22795</td>
-      <td id="T_9d9f7_row3_col14" class="data row3 col14" >0</td>
-      <td id="T_9d9f7_row3_col15" class="data row3 col15" >1</td>
-    </tr>
-    <tr>
-      <th id="T_9d9f7_level0_row4" class="row_heading level0 row4" >4</th>
-      <td id="T_9d9f7_row4_col0" class="data row4 col0" >09:34:47</td>
-      <td id="T_9d9f7_row4_col1" class="data row4 col1" >BOLSA DE COMERCIO DEL CHACO</td>
-      <td id="T_9d9f7_row4_col2" class="data row4 col2" >1337</td>
-      <td id="T_9d9f7_row4_col3" class="data row4 col3" >82243</td>
-      <td id="T_9d9f7_row4_col4" class="data row4 col4" >TO23</td>
-      <td id="T_9d9f7_row4_col5" class="data row4 col5" >2</td>
-      <td id="T_9d9f7_row4_col6" class="data row4 col6" >300,000</td>
-      <td id="T_9d9f7_row4_col7" class="data row4 col7" >-144,900</td>
-      <td id="T_9d9f7_row4_col8" class="data row4 col8" >0</td>
-      <td id="T_9d9f7_row4_col9" class="data row4 col9" >0</td>
-      <td id="T_9d9f7_row4_col10" class="data row4 col10" >154,200</td>
-      <td id="T_9d9f7_row4_col11" class="data row4 col11" >0</td>
-      <td id="T_9d9f7_row4_col12" class="data row4 col12" >9,300</td>
-      <td id="T_9d9f7_row4_col13" class="data row4 col13" >22795</td>
-      <td id="T_9d9f7_row4_col14" class="data row4 col14" >0</td>
-      <td id="T_9d9f7_row4_col15" class="data row4 col15" >1</td>
-    </tr>
-    <tr>
-      <th id="T_9d9f7_level0_row5" class="row_heading level0 row5" >5</th>
-      <td id="T_9d9f7_row5_col0" class="data row5 col0" >09:34:47</td>
-      <td id="T_9d9f7_row5_col1" class="data row5 col1" >BOLSA DE COMERCIO DEL CHACO</td>
-      <td id="T_9d9f7_row5_col2" class="data row5 col2" >1337</td>
-      <td id="T_9d9f7_row5_col3" class="data row5 col3" >83876</td>
-      <td id="T_9d9f7_row5_col4" class="data row5 col4" >AL30</td>
-      <td id="T_9d9f7_row5_col5" class="data row5 col5" >2</td>
-      <td id="T_9d9f7_row5_col6" class="data row5 col6" >1,000</td>
-      <td id="T_9d9f7_row5_col7" class="data row5 col7" >-91,120</td>
-      <td id="T_9d9f7_row5_col8" class="data row5 col8" >0</td>
-      <td id="T_9d9f7_row5_col9" class="data row5 col9" >0</td>
-      <td id="T_9d9f7_row5_col10" class="data row5 col10" >182,800</td>
-      <td id="T_9d9f7_row5_col11" class="data row5 col11" >0</td>
-      <td id="T_9d9f7_row5_col12" class="data row5 col12" >91,680</td>
-      <td id="T_9d9f7_row5_col13" class="data row5 col13" >22795</td>
-      <td id="T_9d9f7_row5_col14" class="data row5 col14" >0</td>
-      <td id="T_9d9f7_row5_col15" class="data row5 col15" >1</td>
-    </tr>
-    <tr>
-      <th id="T_9d9f7_level0_row6" class="row_heading level0 row6" >6</th>
-      <td id="T_9d9f7_row6_col0" class="data row6 col0" >09:43:06</td>
-      <td id="T_9d9f7_row6_col1" class="data row6 col1" >BOLSA DE COMERCIO DEL CHACO</td>
-      <td id="T_9d9f7_row6_col2" class="data row6 col2" >1337</td>
-      <td id="T_9d9f7_row6_col3" class="data row6 col3" >97689</td>
-      <td id="T_9d9f7_row6_col4" class="data row6 col4" >Depósito $</td>
-      <td id="T_9d9f7_row6_col5" class="data row6 col5" >2</td>
-      <td id="T_9d9f7_row6_col6" class="data row6 col6" >30,000</td>
-      <td id="T_9d9f7_row6_col7" class="data row6 col7" >-30,000</td>
-      <td id="T_9d9f7_row6_col8" class="data row6 col8" >0</td>
-      <td id="T_9d9f7_row6_col9" class="data row6 col9" >0</td>
-      <td id="T_9d9f7_row6_col10" class="data row6 col10" >47,925</td>
-      <td id="T_9d9f7_row6_col11" class="data row6 col11" >0</td>
-      <td id="T_9d9f7_row6_col12" class="data row6 col12" >17,925</td>
-      <td id="T_9d9f7_row6_col13" class="data row6 col13" >22795</td>
-      <td id="T_9d9f7_row6_col14" class="data row6 col14" >0</td>
-      <td id="T_9d9f7_row6_col15" class="data row6 col15" >1</td>
+      <th id="T_b6bbf_level0_row0" class="row_heading level0 row0" >0</th>
+      <td id="T_b6bbf_row0_col0" class="data row0 col0" >11:26:10</td>
+      <td id="T_b6bbf_row0_col1" class="data row0 col1" >ADCAP SECURITIES ARGENTINA S.A</td>
+      <td id="T_b6bbf_row0_col2" class="data row0 col2" >1323</td>
+      <td id="T_b6bbf_row0_col3" class="data row0 col3" >161864</td>
+      <td id="T_b6bbf_row0_col4" class="data row0 col4" >FCI Adcap Pesos Plus - Clase B</td>
+      <td id="T_b6bbf_row0_col5" class="data row0 col5" >2</td>
+      <td id="T_b6bbf_row0_col6" class="data row0 col6" >4,350</td>
+      <td id="T_b6bbf_row0_col7" class="data row0 col7" >-64,636</td>
+      <td id="T_b6bbf_row0_col8" class="data row0 col8" >0</td>
+      <td id="T_b6bbf_row0_col9" class="data row0 col9" >0</td>
+      <td id="T_b6bbf_row0_col10" class="data row0 col10" >64,636</td>
+      <td id="T_b6bbf_row0_col11" class="data row0 col11" >0</td>
+      <td id="T_b6bbf_row0_col12" class="data row0 col12" >0</td>
+      <td id="T_b6bbf_row0_col13" class="data row0 col13" >8189</td>
+      <td id="T_b6bbf_row0_col14" class="data row0 col14" >0</td>
+      <td id="T_b6bbf_row0_col15" class="data row0 col15" >0</td>
+      <td id="T_b6bbf_row0_col16" class="data row0 col16" >662,072,234</td>
+      <td id="T_b6bbf_row0_col17" class="data row0 col17" >662,136,870</td>
+      <td id="T_b6bbf_row0_col18" class="data row0 col18" >0</td>
+      <td id="T_b6bbf_row0_col19" class="data row0 col19" >1</td>
     </tr>
   </tbody>
 </table>
