--- a/hrml/se.html
+++ b/hrml/se.html
@@ -1,57 +1,57 @@
 <style type="text/css">
-#T_b6bbf_row0_col0, #T_b6bbf_row0_col1, #T_b6bbf_row0_col2, #T_b6bbf_row0_col3, #T_b6bbf_row0_col4, #T_b6bbf_row0_col5, #T_b6bbf_row0_col6, #T_b6bbf_row0_col7, #T_b6bbf_row0_col8, #T_b6bbf_row0_col9, #T_b6bbf_row0_col10, #T_b6bbf_row0_col11, #T_b6bbf_row0_col12, #T_b6bbf_row0_col13, #T_b6bbf_row0_col14, #T_b6bbf_row0_col15, #T_b6bbf_row0_col16, #T_b6bbf_row0_col17, #T_b6bbf_row0_col18, #T_b6bbf_row0_col19 {
-  background-color: #85e62c;
+#T_306ca_row0_col0, #T_306ca_row0_col1, #T_306ca_row0_col2, #T_306ca_row0_col3, #T_306ca_row0_col4, #T_306ca_row0_col5, #T_306ca_row0_col6, #T_306ca_row0_col7, #T_306ca_row0_col8, #T_306ca_row0_col9, #T_306ca_row0_col10, #T_306ca_row0_col11, #T_306ca_row0_col12, #T_306ca_row0_col13, #T_306ca_row0_col14, #T_306ca_row0_col15, #T_306ca_row0_col16, #T_306ca_row0_col17, #T_306ca_row0_col18, #T_306ca_row0_col19 {
+  background-color: #a8329b;
 }
 </style>
-<table id="T_b6bbf">
+<table id="T_306ca">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
-      <th id="T_b6bbf_level0_col0" class="col_heading level0 col0" >Hora</th>
-      <th id="T_b6bbf_level0_col1" class="col_heading level0 col1" >ALyC</th>
-      <th id="T_b6bbf_level0_col2" class="col_heading level0 col2" >CIM</th>
-      <th id="T_b6bbf_level0_col3" class="col_heading level0 col3" >Cuenta</th>
-      <th id="T_b6bbf_level0_col4" class="col_heading level0 col4" >Activo</th>
-      <th id="T_b6bbf_level0_col5" class="col_heading level0 col5" >FinalidadID</th>
-      <th id="T_b6bbf_level0_col6" class="col_heading level0 col6" >Cantidad</th>
-      <th id="T_b6bbf_level0_col7" class="col_heading level0 col7" >Monto</th>
-      <th id="T_b6bbf_level0_col8" class="col_heading level0 col8" >Ingresos Verificados</th>
-      <th id="T_b6bbf_level0_col9" class="col_heading level0 col9" >Ingreso No Verificado</th>
-      <th id="T_b6bbf_level0_col10" class="col_heading level0 col10" >Saldo Inicial</th>
-      <th id="T_b6bbf_level0_col11" class="col_heading level0 col11" >Margenes</th>
-      <th id="T_b6bbf_level0_col12" class="col_heading level0 col12" >Saldo Consolidado Final</th>
-      <th id="T_b6bbf_level0_col13" class="col_heading level0 col13" >Propia MC</th>
-      <th id="T_b6bbf_level0_col14" class="col_heading level0 col14" >Saldo MC</th>
-      <th id="T_b6bbf_level0_col15" class="col_heading level0 col15" >EstadoLOP</th>
-      <th id="T_b6bbf_level0_col16" class="col_heading level0 col16" >LopNoVerificado</th>
-      <th id="T_b6bbf_level0_col17" class="col_heading level0 col17" >LopVerificado</th>
-      <th id="T_b6bbf_level0_col18" class="col_heading level0 col18" >LopMargenTotal</th>
-      <th id="T_b6bbf_level0_col19" class="col_heading level0 col19" >OUT</th>
+      <th id="T_306ca_level0_col0" class="col_heading level0 col0" >Hora</th>
+      <th id="T_306ca_level0_col1" class="col_heading level0 col1" >ALyC</th>
+      <th id="T_306ca_level0_col2" class="col_heading level0 col2" >CIM</th>
+      <th id="T_306ca_level0_col3" class="col_heading level0 col3" >Cuenta</th>
+      <th id="T_306ca_level0_col4" class="col_heading level0 col4" >Activo</th>
+      <th id="T_306ca_level0_col5" class="col_heading level0 col5" >FinalidadID</th>
+      <th id="T_306ca_level0_col6" class="col_heading level0 col6" >Cantidad</th>
+      <th id="T_306ca_level0_col7" class="col_heading level0 col7" >Monto</th>
+      <th id="T_306ca_level0_col8" class="col_heading level0 col8" >Ingresos Verificados</th>
+      <th id="T_306ca_level0_col9" class="col_heading level0 col9" >Ingreso No Verificado</th>
+      <th id="T_306ca_level0_col10" class="col_heading level0 col10" >Saldo Inicial</th>
+      <th id="T_306ca_level0_col11" class="col_heading level0 col11" >Margenes</th>
+      <th id="T_306ca_level0_col12" class="col_heading level0 col12" >Saldo Consolidado Final</th>
+      <th id="T_306ca_level0_col13" class="col_heading level0 col13" >Propia MC</th>
+      <th id="T_306ca_level0_col14" class="col_heading level0 col14" >Saldo MC</th>
+      <th id="T_306ca_level0_col15" class="col_heading level0 col15" >EstadoLOP</th>
+      <th id="T_306ca_level0_col16" class="col_heading level0 col16" >LopNoVerificado</th>
+      <th id="T_306ca_level0_col17" class="col_heading level0 col17" >LopVerificado</th>
+      <th id="T_306ca_level0_col18" class="col_heading level0 col18" >LopMargenTotal</th>
+      <th id="T_306ca_level0_col19" class="col_heading level0 col19" >OUT</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th id="T_b6bbf_level0_row0" class="row_heading level0 row0" >0</th>
-      <td id="T_b6bbf_row0_col0" class="data row0 col0" >11:26:10</td>
-      <td id="T_b6bbf_row0_col1" class="data row0 col1" >ADCAP SECURITIES ARGENTINA S.A</td>
-      <td id="T_b6bbf_row0_col2" class="data row0 col2" >1323</td>
-      <td id="T_b6bbf_row0_col3" class="data row0 col3" >161864</td>
-      <td id="T_b6bbf_row0_col4" class="data row0 col4" >FCI Adcap Pesos Plus - Clase B</td>
-      <td id="T_b6bbf_row0_col5" class="data row0 col5" >2</td>
-      <td id="T_b6bbf_row0_col6" class="data row0 col6" >4,350</td>
-      <td id="T_b6bbf_row0_col7" class="data row0 col7" >-64,636</td>
-      <td id="T_b6bbf_row0_col8" class="data row0 col8" >0</td>
-      <td id="T_b6bbf_row0_col9" class="data row0 col9" >0</td>
-      <td id="T_b6bbf_row0_col10" class="data row0 col10" >64,636</td>
-      <td id="T_b6bbf_row0_col11" class="data row0 col11" >0</td>
-      <td id="T_b6bbf_row0_col12" class="data row0 col12" >0</td>
-      <td id="T_b6bbf_row0_col13" class="data row0 col13" >8189</td>
-      <td id="T_b6bbf_row0_col14" class="data row0 col14" >0</td>
-      <td id="T_b6bbf_row0_col15" class="data row0 col15" >0</td>
-      <td id="T_b6bbf_row0_col16" class="data row0 col16" >662,072,234</td>
-      <td id="T_b6bbf_row0_col17" class="data row0 col17" >662,136,870</td>
-      <td id="T_b6bbf_row0_col18" class="data row0 col18" >0</td>
-      <td id="T_b6bbf_row0_col19" class="data row0 col19" >1</td>
+      <th id="T_306ca_level0_row0" class="row_heading level0 row0" >0</th>
+      <td id="T_306ca_row0_col0" class="data row0 col0" >16:16:10</td>
+      <td id="T_306ca_row0_col1" class="data row0 col1" >LATIN SECURITIES  S. A.</td>
+      <td id="T_306ca_row0_col2" class="data row0 col2" >1478</td>
+      <td id="T_306ca_row0_col3" class="data row0 col3" >167884</td>
+      <td id="T_306ca_row0_col4" class="data row0 col4" >FCI Delta Pesos - Clase B</td>
+      <td id="T_306ca_row0_col5" class="data row0 col5" >2</td>
+      <td id="T_306ca_row0_col6" class="data row0 col6" >59,795</td>
+      <td id="T_306ca_row0_col7" class="data row0 col7" >-1,108,113</td>
+      <td id="T_306ca_row0_col8" class="data row0 col8" >5,583</td>
+      <td id="T_306ca_row0_col9" class="data row0 col9" >0</td>
+      <td id="T_306ca_row0_col10" class="data row0 col10" >1,102,530</td>
+      <td id="T_306ca_row0_col11" class="data row0 col11" >0</td>
+      <td id="T_306ca_row0_col12" class="data row0 col12" >0</td>
+      <td id="T_306ca_row0_col13" class="data row0 col13" >32831</td>
+      <td id="T_306ca_row0_col14" class="data row0 col14" >33,342</td>
+      <td id="T_306ca_row0_col15" class="data row0 col15" >0</td>
+      <td id="T_306ca_row0_col16" class="data row0 col16" >61,997,696</td>
+      <td id="T_306ca_row0_col17" class="data row0 col17" >63,105,810</td>
+      <td id="T_306ca_row0_col18" class="data row0 col18" >-28,700,000</td>
+      <td id="T_306ca_row0_col19" class="data row0 col19" >4</td>
     </tr>
   </tbody>
 </table>
