--- a/hrml/se.html
+++ b/hrml/se.html
@@ -1,57 +1,175 @@
 <style type="text/css">
-#T_306ca_row0_col0, #T_306ca_row0_col1, #T_306ca_row0_col2, #T_306ca_row0_col3, #T_306ca_row0_col4, #T_306ca_row0_col5, #T_306ca_row0_col6, #T_306ca_row0_col7, #T_306ca_row0_col8, #T_306ca_row0_col9, #T_306ca_row0_col10, #T_306ca_row0_col11, #T_306ca_row0_col12, #T_306ca_row0_col13, #T_306ca_row0_col14, #T_306ca_row0_col15, #T_306ca_row0_col16, #T_306ca_row0_col17, #T_306ca_row0_col18, #T_306ca_row0_col19 {
-  background-color: #a8329b;
+#T_070d4_row0_col0, #T_070d4_row0_col1, #T_070d4_row0_col2, #T_070d4_row0_col3, #T_070d4_row0_col4, #T_070d4_row0_col5, #T_070d4_row0_col6, #T_070d4_row0_col7, #T_070d4_row0_col8, #T_070d4_row0_col9, #T_070d4_row0_col10, #T_070d4_row0_col11, #T_070d4_row0_col12, #T_070d4_row0_col13, #T_070d4_row0_col14, #T_070d4_row0_col15, #T_070d4_row0_col16, #T_070d4_row0_col17, #T_070d4_row0_col18, #T_070d4_row0_col19, #T_070d4_row1_col0, #T_070d4_row1_col1, #T_070d4_row1_col2, #T_070d4_row1_col3, #T_070d4_row1_col4, #T_070d4_row1_col5, #T_070d4_row1_col6, #T_070d4_row1_col7, #T_070d4_row1_col8, #T_070d4_row1_col9, #T_070d4_row1_col10, #T_070d4_row1_col11, #T_070d4_row1_col12, #T_070d4_row1_col13, #T_070d4_row1_col14, #T_070d4_row1_col15, #T_070d4_row1_col16, #T_070d4_row1_col17, #T_070d4_row1_col18, #T_070d4_row1_col19, #T_070d4_row2_col0, #T_070d4_row2_col1, #T_070d4_row2_col2, #T_070d4_row2_col3, #T_070d4_row2_col4, #T_070d4_row2_col5, #T_070d4_row2_col6, #T_070d4_row2_col7, #T_070d4_row2_col8, #T_070d4_row2_col9, #T_070d4_row2_col10, #T_070d4_row2_col11, #T_070d4_row2_col12, #T_070d4_row2_col13, #T_070d4_row2_col14, #T_070d4_row2_col15, #T_070d4_row2_col16, #T_070d4_row2_col17, #T_070d4_row2_col18, #T_070d4_row2_col19, #T_070d4_row3_col0, #T_070d4_row3_col1, #T_070d4_row3_col2, #T_070d4_row3_col3, #T_070d4_row3_col4, #T_070d4_row3_col5, #T_070d4_row3_col6, #T_070d4_row3_col7, #T_070d4_row3_col8, #T_070d4_row3_col9, #T_070d4_row3_col10, #T_070d4_row3_col11, #T_070d4_row3_col12, #T_070d4_row3_col13, #T_070d4_row3_col14, #T_070d4_row3_col15, #T_070d4_row3_col16, #T_070d4_row3_col17, #T_070d4_row3_col18, #T_070d4_row3_col19, #T_070d4_row4_col0, #T_070d4_row4_col1, #T_070d4_row4_col2, #T_070d4_row4_col3, #T_070d4_row4_col4, #T_070d4_row4_col5, #T_070d4_row4_col6, #T_070d4_row4_col7, #T_070d4_row4_col8, #T_070d4_row4_col9, #T_070d4_row4_col10, #T_070d4_row4_col11, #T_070d4_row4_col12, #T_070d4_row4_col13, #T_070d4_row4_col14, #T_070d4_row4_col15, #T_070d4_row4_col16, #T_070d4_row4_col17, #T_070d4_row4_col18, #T_070d4_row4_col19 {
+  background-color: #5c4c9e;
+}
+#T_070d4_row5_col0, #T_070d4_row5_col1, #T_070d4_row5_col2, #T_070d4_row5_col3, #T_070d4_row5_col4, #T_070d4_row5_col5, #T_070d4_row5_col6, #T_070d4_row5_col7, #T_070d4_row5_col8, #T_070d4_row5_col9, #T_070d4_row5_col10, #T_070d4_row5_col11, #T_070d4_row5_col12, #T_070d4_row5_col13, #T_070d4_row5_col14, #T_070d4_row5_col15, #T_070d4_row5_col16, #T_070d4_row5_col17, #T_070d4_row5_col18, #T_070d4_row5_col19 {
+  background-color: #ebff0a;
 }
 </style>
-<table id="T_306ca">
+<table id="T_070d4">
   <thead>
     <tr>
       <th class="blank level0" >&nbsp;</th>
-      <th id="T_306ca_level0_col0" class="col_heading level0 col0" >Hora</th>
-      <th id="T_306ca_level0_col1" class="col_heading level0 col1" >ALyC</th>
-      <th id="T_306ca_level0_col2" class="col_heading level0 col2" >CIM</th>
-      <th id="T_306ca_level0_col3" class="col_heading level0 col3" >Cuenta</th>
-      <th id="T_306ca_level0_col4" class="col_heading level0 col4" >Activo</th>
-      <th id="T_306ca_level0_col5" class="col_heading level0 col5" >FinalidadID</th>
-      <th id="T_306ca_level0_col6" class="col_heading level0 col6" >Cantidad</th>
-      <th id="T_306ca_level0_col7" class="col_heading level0 col7" >Monto</th>
-      <th id="T_306ca_level0_col8" class="col_heading level0 col8" >Ingresos Verificados</th>
-      <th id="T_306ca_level0_col9" class="col_heading level0 col9" >Ingreso No Verificado</th>
-      <th id="T_306ca_level0_col10" class="col_heading level0 col10" >Saldo Inicial</th>
-      <th id="T_306ca_level0_col11" class="col_heading level0 col11" >Margenes</th>
-      <th id="T_306ca_level0_col12" class="col_heading level0 col12" >Saldo Consolidado Final</th>
-      <th id="T_306ca_level0_col13" class="col_heading level0 col13" >Propia MC</th>
-      <th id="T_306ca_level0_col14" class="col_heading level0 col14" >Saldo MC</th>
-      <th id="T_306ca_level0_col15" class="col_heading level0 col15" >EstadoLOP</th>
-      <th id="T_306ca_level0_col16" class="col_heading level0 col16" >LopNoVerificado</th>
-      <th id="T_306ca_level0_col17" class="col_heading level0 col17" >LopVerificado</th>
-      <th id="T_306ca_level0_col18" class="col_heading level0 col18" >LopMargenTotal</th>
-      <th id="T_306ca_level0_col19" class="col_heading level0 col19" >OUT</th>
+      <th id="T_070d4_level0_col0" class="col_heading level0 col0" >Hora</th>
+      <th id="T_070d4_level0_col1" class="col_heading level0 col1" >ALyC</th>
+      <th id="T_070d4_level0_col2" class="col_heading level0 col2" >CIM</th>
+      <th id="T_070d4_level0_col3" class="col_heading level0 col3" >Cuenta</th>
+      <th id="T_070d4_level0_col4" class="col_heading level0 col4" >Activo</th>
+      <th id="T_070d4_level0_col5" class="col_heading level0 col5" >FinalidadID</th>
+      <th id="T_070d4_level0_col6" class="col_heading level0 col6" >Cantidad</th>
+      <th id="T_070d4_level0_col7" class="col_heading level0 col7" >Monto</th>
+      <th id="T_070d4_level0_col8" class="col_heading level0 col8" >Ingresos Verificados</th>
+      <th id="T_070d4_level0_col9" class="col_heading level0 col9" >Ingreso No Verificado</th>
+      <th id="T_070d4_level0_col10" class="col_heading level0 col10" >Saldo Inicial</th>
+      <th id="T_070d4_level0_col11" class="col_heading level0 col11" >Margenes</th>
+      <th id="T_070d4_level0_col12" class="col_heading level0 col12" >Saldo Consolidado Final</th>
+      <th id="T_070d4_level0_col13" class="col_heading level0 col13" >Propia MC</th>
+      <th id="T_070d4_level0_col14" class="col_heading level0 col14" >Saldo MC</th>
+      <th id="T_070d4_level0_col15" class="col_heading level0 col15" >EstadoLOP</th>
+      <th id="T_070d4_level0_col16" class="col_heading level0 col16" >LopNoVerificado</th>
+      <th id="T_070d4_level0_col17" class="col_heading level0 col17" >LopVerificado</th>
+      <th id="T_070d4_level0_col18" class="col_heading level0 col18" >LopMargenTotal</th>
+      <th id="T_070d4_level0_col19" class="col_heading level0 col19" >OUT</th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th id="T_306ca_level0_row0" class="row_heading level0 row0" >0</th>
-      <td id="T_306ca_row0_col0" class="data row0 col0" >16:16:10</td>
-      <td id="T_306ca_row0_col1" class="data row0 col1" >LATIN SECURITIES  S. A.</td>
-      <td id="T_306ca_row0_col2" class="data row0 col2" >1478</td>
-      <td id="T_306ca_row0_col3" class="data row0 col3" >167884</td>
-      <td id="T_306ca_row0_col4" class="data row0 col4" >FCI Delta Pesos - Clase B</td>
-      <td id="T_306ca_row0_col5" class="data row0 col5" >2</td>
-      <td id="T_306ca_row0_col6" class="data row0 col6" >59,795</td>
-      <td id="T_306ca_row0_col7" class="data row0 col7" >-1,108,113</td>
-      <td id="T_306ca_row0_col8" class="data row0 col8" >5,583</td>
-      <td id="T_306ca_row0_col9" class="data row0 col9" >0</td>
-      <td id="T_306ca_row0_col10" class="data row0 col10" >1,102,530</td>
-      <td id="T_306ca_row0_col11" class="data row0 col11" >0</td>
-      <td id="T_306ca_row0_col12" class="data row0 col12" >0</td>
-      <td id="T_306ca_row0_col13" class="data row0 col13" >32831</td>
-      <td id="T_306ca_row0_col14" class="data row0 col14" >33,342</td>
-      <td id="T_306ca_row0_col15" class="data row0 col15" >0</td>
-      <td id="T_306ca_row0_col16" class="data row0 col16" >61,997,696</td>
-      <td id="T_306ca_row0_col17" class="data row0 col17" >63,105,810</td>
-      <td id="T_306ca_row0_col18" class="data row0 col18" >-28,700,000</td>
-      <td id="T_306ca_row0_col19" class="data row0 col19" >4</td>
+      <th id="T_070d4_level0_row0" class="row_heading level0 row0" >0</th>
+      <td id="T_070d4_row0_col0" class="data row0 col0" >14:22:40</td>
+      <td id="T_070d4_row0_col1" class="data row0 col1" >CONSULTATIO INVESTMENTS S.A.</td>
+      <td id="T_070d4_row0_col2" class="data row0 col2" >1359</td>
+      <td id="T_070d4_row0_col3" class="data row0 col3" >148687</td>
+      <td id="T_070d4_row0_col4" class="data row0 col4" >FCI Consultatio Fondo de Dinero - Clase B</td>
+      <td id="T_070d4_row0_col5" class="data row0 col5" >2</td>
+      <td id="T_070d4_row0_col6" class="data row0 col6" >69,000,000</td>
+      <td id="T_070d4_row0_col7" class="data row0 col7" >-117,748,569</td>
+      <td id="T_070d4_row0_col8" class="data row0 col8" >0</td>
+      <td id="T_070d4_row0_col9" class="data row0 col9" >0</td>
+      <td id="T_070d4_row0_col10" class="data row0 col10" >118,323,339</td>
+      <td id="T_070d4_row0_col11" class="data row0 col11" >0</td>
+      <td id="T_070d4_row0_col12" class="data row0 col12" >574,770</td>
+      <td id="T_070d4_row0_col13" class="data row0 col13" >37126</td>
+      <td id="T_070d4_row0_col14" class="data row0 col14" >0</td>
+      <td id="T_070d4_row0_col15" class="data row0 col15" >0</td>
+      <td id="T_070d4_row0_col16" class="data row0 col16" >298,740,875</td>
+      <td id="T_070d4_row0_col17" class="data row0 col17" >430,797,581</td>
+      <td id="T_070d4_row0_col18" class="data row0 col18" >0</td>
+      <td id="T_070d4_row0_col19" class="data row0 col19" >4</td>
+    </tr>
+    <tr>
+      <th id="T_070d4_level0_row1" class="row_heading level0 row1" >1</th>
+      <td id="T_070d4_row1_col0" class="data row1 col0" >14:25:16</td>
+      <td id="T_070d4_row1_col1" class="data row1 col1" >CONSULTATIO INVESTMENTS S.A.</td>
+      <td id="T_070d4_row1_col2" class="data row1 col2" >1359</td>
+      <td id="T_070d4_row1_col3" class="data row1 col3" >149740</td>
+      <td id="T_070d4_row1_col4" class="data row1 col4" >FCI Consultatio Renta Nacional - Clase B</td>
+      <td id="T_070d4_row1_col5" class="data row1 col5" >2</td>
+      <td id="T_070d4_row1_col6" class="data row1 col6" >18,250</td>
+      <td id="T_070d4_row1_col7" class="data row1 col7" >-510,504</td>
+      <td id="T_070d4_row1_col8" class="data row1 col8" >0</td>
+      <td id="T_070d4_row1_col9" class="data row1 col9" >0</td>
+      <td id="T_070d4_row1_col10" class="data row1 col10" >3,517,358</td>
+      <td id="T_070d4_row1_col11" class="data row1 col11" >0</td>
+      <td id="T_070d4_row1_col12" class="data row1 col12" >3,006,854</td>
+      <td id="T_070d4_row1_col13" class="data row1 col13" >37126</td>
+      <td id="T_070d4_row1_col14" class="data row1 col14" >0</td>
+      <td id="T_070d4_row1_col15" class="data row1 col15" >0</td>
+      <td id="T_070d4_row1_col16" class="data row1 col16" >298,740,875</td>
+      <td id="T_070d4_row1_col17" class="data row1 col17" >430,797,581</td>
+      <td id="T_070d4_row1_col18" class="data row1 col18" >0</td>
+      <td id="T_070d4_row1_col19" class="data row1 col19" >4</td>
+    </tr>
+    <tr>
+      <th id="T_070d4_level0_row2" class="row_heading level0 row2" >2</th>
+      <td id="T_070d4_row2_col0" class="data row2 col0" >14:26:25</td>
+      <td id="T_070d4_row2_col1" class="data row2 col1" >CONSULTATIO INVESTMENTS S.A.</td>
+      <td id="T_070d4_row2_col2" class="data row2 col2" >1359</td>
+      <td id="T_070d4_row2_col3" class="data row2 col3" >149740</td>
+      <td id="T_070d4_row2_col4" class="data row2 col4" >FCI Consultatio Fondo de Dinero - Clase B</td>
+      <td id="T_070d4_row2_col5" class="data row2 col5" >2</td>
+      <td id="T_070d4_row2_col6" class="data row2 col6" >1,762,000</td>
+      <td id="T_070d4_row2_col7" class="data row2 col7" >-3,006,854</td>
+      <td id="T_070d4_row2_col8" class="data row2 col8" >0</td>
+      <td id="T_070d4_row2_col9" class="data row2 col9" >0</td>
+      <td id="T_070d4_row2_col10" class="data row2 col10" >3,517,358</td>
+      <td id="T_070d4_row2_col11" class="data row2 col11" >0</td>
+      <td id="T_070d4_row2_col12" class="data row2 col12" >510,504</td>
+      <td id="T_070d4_row2_col13" class="data row2 col13" >37126</td>
+      <td id="T_070d4_row2_col14" class="data row2 col14" >0</td>
+      <td id="T_070d4_row2_col15" class="data row2 col15" >0</td>
+      <td id="T_070d4_row2_col16" class="data row2 col16" >298,740,875</td>
+      <td id="T_070d4_row2_col17" class="data row2 col17" >430,797,581</td>
+      <td id="T_070d4_row2_col18" class="data row2 col18" >0</td>
+      <td id="T_070d4_row2_col19" class="data row2 col19" >4</td>
+    </tr>
+    <tr>
+      <th id="T_070d4_level0_row3" class="row_heading level0 row3" >3</th>
+      <td id="T_070d4_row3_col0" class="data row3 col0" >14:32:00</td>
+      <td id="T_070d4_row3_col1" class="data row3 col1" >CONSULTATIO INVESTMENTS S.A.</td>
+      <td id="T_070d4_row3_col2" class="data row3 col2" >1359</td>
+      <td id="T_070d4_row3_col3" class="data row3 col3" >160394</td>
+      <td id="T_070d4_row3_col4" class="data row3 col4" >FCI Consultatio Ahorro Plus Argentina F.C.I. - Clase B</td>
+      <td id="T_070d4_row3_col5" class="data row3 col5" >2</td>
+      <td id="T_070d4_row3_col6" class="data row3 col6" >195,000</td>
+      <td id="T_070d4_row3_col7" class="data row3 col7" >-5,671,274</td>
+      <td id="T_070d4_row3_col8" class="data row3 col8" >0</td>
+      <td id="T_070d4_row3_col9" class="data row3 col9" >0</td>
+      <td id="T_070d4_row3_col10" class="data row3 col10" >6,098,300</td>
+      <td id="T_070d4_row3_col11" class="data row3 col11" >0</td>
+      <td id="T_070d4_row3_col12" class="data row3 col12" >427,025</td>
+      <td id="T_070d4_row3_col13" class="data row3 col13" >37126</td>
+      <td id="T_070d4_row3_col14" class="data row3 col14" >0</td>
+      <td id="T_070d4_row3_col15" class="data row3 col15" >0</td>
+      <td id="T_070d4_row3_col16" class="data row3 col16" >298,740,875</td>
+      <td id="T_070d4_row3_col17" class="data row3 col17" >430,797,581</td>
+      <td id="T_070d4_row3_col18" class="data row3 col18" >0</td>
+      <td id="T_070d4_row3_col19" class="data row3 col19" >4</td>
+    </tr>
+    <tr>
+      <th id="T_070d4_level0_row4" class="row_heading level0 row4" >4</th>
+      <td id="T_070d4_row4_col0" class="data row4 col0" >14:36:26</td>
+      <td id="T_070d4_row4_col1" class="data row4 col1" >CONSULTATIO INVESTMENTS S.A.</td>
+      <td id="T_070d4_row4_col2" class="data row4 col2" >1359</td>
+      <td id="T_070d4_row4_col3" class="data row4 col3" >161437</td>
+      <td id="T_070d4_row4_col4" class="data row4 col4" >FCI Consultatio Fondo de Dinero - Clase B</td>
+      <td id="T_070d4_row4_col5" class="data row4 col5" >2</td>
+      <td id="T_070d4_row4_col6" class="data row4 col6" >3,000,000</td>
+      <td id="T_070d4_row4_col7" class="data row4 col7" >-5,119,503</td>
+      <td id="T_070d4_row4_col8" class="data row4 col8" >0</td>
+      <td id="T_070d4_row4_col9" class="data row4 col9" >0</td>
+      <td id="T_070d4_row4_col10" class="data row4 col10" >5,293,944</td>
+      <td id="T_070d4_row4_col11" class="data row4 col11" >0</td>
+      <td id="T_070d4_row4_col12" class="data row4 col12" >174,441</td>
+      <td id="T_070d4_row4_col13" class="data row4 col13" >37126</td>
+      <td id="T_070d4_row4_col14" class="data row4 col14" >0</td>
+      <td id="T_070d4_row4_col15" class="data row4 col15" >0</td>
+      <td id="T_070d4_row4_col16" class="data row4 col16" >298,740,875</td>
+      <td id="T_070d4_row4_col17" class="data row4 col17" >430,797,581</td>
+      <td id="T_070d4_row4_col18" class="data row4 col18" >0</td>
+      <td id="T_070d4_row4_col19" class="data row4 col19" >4</td>
+    </tr>
+    <tr>
+      <th id="T_070d4_level0_row5" class="row_heading level0 row5" >5</th>
+      <td id="T_070d4_row5_col0" class="data row5 col0" >17:34:19</td>
+      <td id="T_070d4_row5_col1" class="data row5 col1" >MARIVA BURSATIL S A</td>
+      <td id="T_070d4_row5_col2" class="data row5 col2" >1417</td>
+      <td id="T_070d4_row5_col3" class="data row5 col3" >155790</td>
+      <td id="T_070d4_row5_col4" class="data row5 col4" >X17F3</td>
+      <td id="T_070d4_row5_col5" class="data row5 col5" >2</td>
+      <td id="T_070d4_row5_col6" class="data row5 col6" >90,000,000</td>
+      <td id="T_070d4_row5_col7" class="data row5 col7" >-133,840,728</td>
+      <td id="T_070d4_row5_col8" class="data row5 col8" >906,890</td>
+      <td id="T_070d4_row5_col9" class="data row5 col9" >35,332,000</td>
+      <td id="T_070d4_row5_col10" class="data row5 col10" >105,091,128</td>
+      <td id="T_070d4_row5_col11" class="data row5 col11" >0</td>
+      <td id="T_070d4_row5_col12" class="data row5 col12" >-27,842,710</td>
+      <td id="T_070d4_row5_col13" class="data row5 col13" >6598</td>
+      <td id="T_070d4_row5_col14" class="data row5 col14" >0</td>
+      <td id="T_070d4_row5_col15" class="data row5 col15" >0</td>
+      <td id="T_070d4_row5_col16" class="data row5 col16" >367,365,640</td>
+      <td id="T_070d4_row5_col17" class="data row5 col17" >465,874,368</td>
+      <td id="T_070d4_row5_col18" class="data row5 col18" >-35,517,300</td>
+      <td id="T_070d4_row5_col19" class="data row5 col19" >2</td>
     </tr>
   </tbody>
 </table>
